--- a/plan.html
+++ b/plan.html
@@ -56,8 +56,8 @@
         </div>
     </div>
    
-    <div class='timetaco-list taco' data-timetacoid='junjku' style="margin-top:-2.3px;"></div>
-    <div class="ocp" style="display:none">
+    <div class='timetaco-list taco' data-timetacoid='junjku' style="margin-top:1.7px;"></div>
+    <div class="ocp">
         <div class="ocp-list">
             <h1>OCPJP Todo-List</h1>
             <ul>
@@ -75,6 +75,25 @@
                 <li>12. Localization <i class="fa-regular fa-circle-check check"></i></li> 
                 <li>13. Annotations <i class="fa-regular fa-circle-check check"></i></li> 
                 <li>14. Previous Exams <i class="fa-regular fa-circle-check check"></i></li>
+            </ul>
+        </div>
+        <div class="ocp-list">
+            <h1>OCE JWCD Todo-List</h1>
+            <ul>
+                <li>1. Understand Java EE Architecture</li>
+                <li>2. Manage Persistence using JPA Entities and BeanValidation </li>
+                <li>3. Implement Business Logic by Using EJBs</li>
+                <li>4. Use Java Message Service API</li>
+                <li>5. Implement SOAP Services by Using JAX-WS and JAXB APIs </li>
+                <li>6. Create Java Web Applications using Servlets</li>
+                <li>7. Create Java Web Applications using JSPs</li>
+                <li>8. Implement REST Services using JAX-RS API</li>
+                <li>9. Create Java Applications using WebSockets</li>
+                <li>10. Develop Web Applications using JSFs</li>
+                <li>11. Secure Java EE 7 Applications</li>
+                <li>12. Use CDI Beans </li>
+                <li>13. Use Concurrency API in Java EE 7 Applications</li>
+                <li>14. Use Batch API in Java EE 7 Applications</li>
             </ul>
         </div>
     </div>
@@ -125,17 +144,17 @@
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box fc-box">
                     <h2>前端工程師企業實習（一）</h2>
-                    <h4>2022.11.01~2023.05.01</h4>
+                    <h4>2022.11.12~2023.10.01</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>React</h2>
-                    <h4>2023.02.01~2023.02.28</h4>
+                    <h2>VueJS</h2>
+                    <h4>2022.11.10~2022.12.25</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>Vue</h2>
-                    <h4>2023.03.01~2023.04.01</h4>
+                    <h2>JavaScript 延伸系列</h2>
+                    <h4>2023.03</h4>
                 </div>
             </div>
             <div class="bed">
@@ -164,23 +183,18 @@
                     </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box">
-                        <h2> Java OCE JWCD 自主學習</h2>
-                        <h4>2022.10.05~2022.11.31</h4>
-                    </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-                    <div class="session-box">
                         <h2> Java OCE JWCD (一）</h2>
-                        <h4>2022.11.12~2023.01.14</h4>
+                        <h4>2022.12.26~2023.02.22</h4>
                     </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box fc2-box">
                         <h2>Java OCE 考前衝刺</h2>
-                        <h4>2022.12.01~2023.01.29</h4>
+                        <h4>2022.12.26~2023.02.26</h4>
                     </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box fc-box">
                         <h2> Java OCE JWCD 國證</h2>
-                        <h4>2023.01.30</h4>
+                        <h4>2023.02.27</h4>
                     </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box fc2-box">
