--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <button class="skills-text-mark" id="skill-open">查看詳情</button>
         <div class="skills-text-mark-block">
             <div class="skills-text-mark-block-img">
-                <img src="images/PR.png" alt="">
+                <img src="images/pr2.png" alt="">
                 <button class="skills-btn-1" id="skill-close">close</button>
             </div>
         </div>
@@ -174,7 +174,7 @@
             <li>
                 <img src="images/javascript.png" alt="">
                 <div class="skill-text">JavaScript</div>
-                <div class="level2">中等</div>
+                <div class="level2" style="background:orange">中等</div>
             </li>
             <li style="display: none;">
                 <img src="images/bootstrap.png" alt="">
@@ -184,7 +184,7 @@
             <li>
                 <img class="vue" src="images/vue.png" alt=""> 
                 <div class="skill-text">Vue.js</div>
-                <div class="level2" style="background: brown ;">進行</div>
+                <div class="level2">基礎</div>
             </li>
             <li>
                 <img src="images/Google_Apps_Script.svg.png" alt=""> 
