--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="content show14 animate__animated" id="14" >
                 <div class="href">
                     <img src="images/ee382621ccb72aa8e10cf1d27e277c253a47c3b9.webp" alt="">
-                    <a target="_blank" href="https://sc1314520.github.io/heartlunch.github.io/index.html"><div class="content-img-text">
+                    <a target="_blank" href="https://sc1314520.github.io/lunch.github.io/"><div class="content-img-text">
                         <span class="content-img-text-1">前往頁面</span>
                     </div></a>
                 </div>
@@ -288,7 +288,7 @@
                         製作時間：2022.11.03
                     </div>
                     <div class="intro-text-4">
-                        詳細傳送門：<a target="_blank" href="https://sc1314520.github.io/heartlunch.github.io/index.html">點擊連結</a>
+                        詳細傳送門：<a target="_blank" href="https://sc1314520.github.io/lunch.github.io/">點擊連結</a>
                     </div>
                 </div>
             </div>
