--- a/index.html
+++ b/index.html
@@ -244,25 +244,26 @@
         <div>
             <div class="content show15 animate__animated" id="15" >
                 <div class="href">
-                    <img src="images/vuef.png" alt="">
-                    <a target="_blank" href="https://github.com/sc1314520/Vue-self"><div class="content-img-text">
+                    <img src="images/sr.png" alt="">
+                    <a target="_blank" href="https://sc1314520.github.io/GSAT-112/"><div class="content-img-text">
                         <span class="content-img-text-1">前往頁面</span>
                     </div></a>
                 </div>
                 <div class="introduction">
                     <div class="intro-text">
-                        <h1>VueJS 自學筆記</h1>
-                        <p>自主學習熱門企業常用前端框架</p>
+                        <h1>112 學測甄試查詢網站</h1>
+                        <p>利用 VueJS 搭配 JS 爬蟲所撰寫之網頁</p>
                     </div>
                     <div class="intro-text-2">
-                        基本技巧：JavaScript/VueJS<br/>
-                        程式運用：VScode<br>
+                        基本技巧：JavaScript/VueJS/AppScript<br/>
+                        程式運用：VScode/Google Sheet / CheerIO<br>
+                        里程碑記錄：2023/01/06 使用人數達 10000 次
                     </div>
                     <div class="intro-text-3">
-                        製作時間：2022.11.10
+                        製作時間：2022.12.30
                     </div>
                     <div class="intro-text-4">
-                        詳細傳送門：<a target="_blank" href="https://github.com/sc1314520/Vue-self">點擊連結</a>
+                        詳細傳送門：<a target="_blank" href="https://sc1314520.github.io/GSAT-112/">點擊連結</a>
                     </div>
                 </div>
             </div>
