--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         <option value="12">12. 高雄一日遊</option>
                         <option value="13">13. ITS-304 Java 國際認證</option>
                         <option value="14">14. GAS串接：訂餐系統</option>
-                        <option value="15">15. VueJS 自學筆記</option>
+                        <option value="15">15. JS爬蟲：學測查詢系統</option>
                 </select>
             </div>
             <div class="search-ico-1">
