--- a/academic.html
+++ b/academic.html
@@ -57,16 +57,14 @@
                     <th>英文</th>
                     <th>體育</th>
                     <th>大學入門</th>
-                    <th>普化實驗</th>
-                    <th>普化甲</th>
-                    <th>微積分</th>
-                    <th>計算物理</th>
-                    <th>普物實驗</th>
-                    <th>基礎數物</th>
-                    <th>普物甲</th>
-                    <th>物理辯論</th>
-                    <th>學分數</th>
-                    <th>GPA</th>
+                    <th style="color: brown;">普化實驗</th>
+                    <th style="color: brown;">普化甲</th>
+                    <th style="color: brown;">微積分</th>
+                    <th style="color: brown;">計算物理</th>
+                    <th style="color: brown;">普物實驗</th>
+                    <th style="color: brown;">基礎數物</th>
+                    <th style="color: brown;">普物甲</th>
+                    <th style="color: brown;">物理辯論</th>
                 </tr>
                 <tr>
                     <td>等第</td>
@@ -82,8 +80,6 @@
                     <td>A+</td>
                     <td>A+</td>
                     <td>A</td>
-                    <td>24</td>
-                    <td>4.05</td>
                 </tr>
             </table>
             <table class="score-table1">
@@ -95,15 +91,13 @@
                     <th>體育</th>
                     <th>運算思維</th>
                     <th>心理學</th>
-                    <th>普化實驗</th>
-                    <th>普化甲</th>
-                    <th>微積分</th>
-                    <th>普物實驗</th>
-                    <th>基礎數物</th>
-                    <th>普物甲</th>
+                    <th style="color: brown;">普化實驗</th>
+                    <th style="color: brown;">普化甲</th>
+                    <th style="color: brown;">微積分</th>
+                    <th style="color: brown;">普物實驗</th>
+                    <th style="color: brown;">基礎數物</th>
+                    <th style="color: brown;">普物甲</th>
                     <th>OCE</th>
-                    <th>學分數</th>
-                    <th>GPA</th>
                 </tr>
                 <tr>
                     <td>等第</td>
@@ -119,47 +113,41 @@
                     <td>A+</td>
                     <td>A+</td>
                     <td>外修</td>
-                    <td>21<span class="ext"> +6</span></td>
-                    <td>3.90</td>
                 </tr>
             </table>
         </div>
         <div class="score-content">
-            <h2>Sophomore (wait)</h2>
+            <h2>Sophomore</h2>
             <table class="score-table1">
                 <tr>
                     <th>科目</th>
                     <th>英文三</th>
                     <th>體育</th>
-                    <th>力學一</th>
-                    <th>熱物理學</th>
-                    <th>數學物理一</th>
-                    <th>實驗物理一</th>
+                    <th style="color: brown;">力學一</th>
+                    <th style="color: brown;">熱物理學</th>
+                    <th style="color: brown;">數學物理一</th>
+                    <th style="color: brown;">實驗物理一</th>
                     <th>生理心理學</th>
                     <th>日本美術</th>
                     <th>ITS</th>
-                    <th>OCPJP</th>
+                    <th>OCPJD</th>
                     <th>OCEJWCD</th>
                     <th>前端工程師</th>
-                    <th>學分數</th>
-                    <th>GPA</th>
                 </tr>
                 <tr>
                     <td>等第</td>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
+                    <th>A</th>
+                    <th>A</th>
+                    <th>A-</th>
+                    <th>B+</th>
+                    <th>A+</th>
+                    <th>A</th>
+                    <th>B+</th>
+                    <th>B+</th>
                     <th>國際認證</th>
                     <th>國際認證</th>
-                    <th>外修</th>
+                    <th>國際認證</th>
                     <th>企業實習</th>
-                    <td>19<span class="ext"> +16</span></td>
-                    <td>none</td>
                 </tr>
             </table>
             <table class="score-table1">
@@ -177,8 +165,6 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <td>學分數</td>
-                    <th>GPA</th>
                 </tr>
                 <tr>
                     <td>等第</td>
@@ -194,8 +180,6 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <td><span class="ext">+</span></td>
-                    <td>none</td>
                 </tr>
             </table>
         </div>
@@ -216,8 +200,6 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <td>學分數</td>
-                    <th>GPA</th>
                 </tr>
                 <tr>
                     <td>等第</td>
@@ -233,8 +215,6 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <td><span class="ext">+</span></td>
-                    <td>none</td>
                 </tr>
             </table>
             <table class="score-table1">
@@ -253,8 +233,6 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <td>學分數</td>
-                    <th>GPA</th>
                 </tr>
                 <tr>
                     <td>等第</td>
@@ -270,8 +248,6 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <td><span class="ext">+</span></td>
-                    <td>none</td>
                 </tr>
             </table>
         </div>
@@ -292,8 +268,6 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <td>學分數</td>
-                    <th>GPA</th>
                 </tr>
                 <tr>
                     <td>等第</td>
@@ -309,8 +283,6 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <td><span class="ext">+</span></td>
-                    <td>none</td>
                 </tr>
             </table>
             <table class="score-table1">
@@ -329,8 +301,6 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <td>學分數</td>
-                    <th>GPA</th>
                 </tr>
                 <tr>
                     <td>等第</td>
@@ -346,8 +316,6 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <td><span class="ext">+</span></td>
-                    <td>none</td>
                 </tr>
             </table>
         </div>
