--- a/academic.html
+++ b/academic.html
@@ -97,7 +97,7 @@
                     <th style="color: brown;">普物實驗</th>
                     <th style="color: brown;">基礎數物</th>
                     <th style="color: brown;">普物甲</th>
-                    <th>OCE</th>
+                    <td>外修課程</td>
                 </tr>
                 <tr>
                     <td>等第</td>
@@ -112,7 +112,7 @@
                     <td>B+</td>
                     <td>A+</td>
                     <td>A+</td>
-                    <td>外修</td>
+                    <th>網頁開發</th>
                 </tr>
             </table>
         </div>
@@ -129,10 +129,10 @@
                     <th style="color: brown;">實驗物理一</th>
                     <th>生理心理學</th>
                     <th>日本美術</th>
-                    <th>ITS</th>
-                    <th>OCPJD</th>
-                    <th>OCEJWCD</th>
-                    <th>前端工程師</th>
+                    <th style="color: red;">國際認證</th>
+                    <th style="color: red;">國際認證</th>
+                    <th style="color: red;">國際認證</th>
+                    <th>自主學習</th>
                 </tr>
                 <tr>
                     <td>等第</td>
@@ -144,27 +144,27 @@
                     <th>A</th>
                     <th>B+</th>
                     <th>B+</th>
-                    <th>國際認證</th>
-                    <th>國際認證</th>
-                    <th>國際認證</th>
-                    <th>企業實習</th>
+                    <th>ITS</th>
+                    <th>OCPJD</th>
+                    <th>OCEJWCD</th>
+                    <th>JavaScript</th>
                 </tr>
             </table>
             <table class="score-table1">
                 <tr>
                     <th>科目</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
+                    <th style="color: brown;">力學二</th>
+                    <th style="color: brown;">數學物理二</th>
+                    <th style="color: brown;">電磁學一</th>
+                    <th style="color: brown;">實驗物理二</th>
+                    <th style="color: brown;">實驗技術</th>
+                    <th>體育</th>
+                    <th>Excel商務</th>
+                    <th>Excel程設</th>
+                    <th>投資理財</th>
+                    <th>外修課程</th>
+                    <th>外修課程</th>
+                    <th>自主學習</th>
                 </tr>
                 <tr>
                     <td>等第</td>
@@ -177,9 +177,9 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
+                    <th>網頁開發</th>
+                    <th>Spring框架</th>
+                    <th style="font-size: 10px;">JavaScript ES6</th>
                 </tr>
             </table>
         </div>
