--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
 <script>
     var end =new Date().getMilliseconds();
     var total =Math.abs(end-now);
-    alert("此為電腦版網頁，請使用電腦欣賞。 加載時長："+total+"ms");
+    alert("此為[初學]時所創建之簡易電腦版網頁，請使用電腦欣賞。 加載時長："+total+"ms");
 </script>
 </body>
 </html>
