--- a/basic.html
+++ b/basic.html
@@ -105,9 +105,9 @@
         <div class="main-title">Degree of Education</div>
         <div class="main-content-all">
             <div class="main-content">
-                <div class="main-img"><img src="images/ntnu.png" alt=""></div>
+                <div class="main-img"><img src="images/nthu.png" alt=""></div>
                 <div class="main-text">
-                    <h1>國立臺灣師範大學師範大學物理學系</h1>
+                    <h1>國立清華大學工程與系統科學系</h1>
                     <p> 就讀期間：2021.09 - 2025.07</p>
                 </div>
             </div>
