--- a/academic.html
+++ b/academic.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- js -->
     <script src="js/jquery2.2.3.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/index2.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -334,10 +334,10 @@
     </div>
     <div class="more-info">
         <span class="more"><a class="more-a" target="_blank"
-                href="https://drive.google.com/file/d/1CmOZhbUqwPg5Y9loH4RRUEsGyxQBce3f/view?usp=sharing">觀看更多
+                href="https://drive.google.com/file/d/1BMB_8Zbh5LaKT7yNHsUSbepBZ53g3kMT/view?usp=share_link">觀看更多
                 --></a></span>
         <h1><a target="_blank"
-                href="https://drive.google.com/file/d/1CmOZhbUqwPg5Y9loH4RRUEsGyxQBce3f/view?usp=sharing">Other's
+                href="https://drive.google.com/file/d/1BMB_8Zbh5LaKT7yNHsUSbepBZ53g3kMT/view?usp=share_link">Other's
                 Opinions</a></h1>
         <div class="info-text">
 
