--- a/plan.html
+++ b/plan.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- js -->
     <script src="js/jquery2.2.3.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/index2.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.css">
@@ -264,8 +264,8 @@
         <p>一個人的人生是由自己負責的，當自己不把握能夠全心投入在學習的時光時，未來吃虧的就會是自己。假若現在的自己能夠放下一些不必要的事情與娛樂，而去多加的善用資源與學習新知，進到職場上的自己將會擁有更好的競爭力。有些人可能會認為大學就是要好好享受青春時光，但我並不覺得如此，因為「先甘後苦，先苦後甘」這個道理是歷久不衰的道理，既然現在身為學生的我們無須煩惱工作上的壓力並且擁有大量的自主時間，那又為何不趁現在去學更多東西呢？令一方面是因為不希望辜負父母栽培我們的心血以及常常聽到職場上的人在悔不當初，若不想成為同樣的人，那就應該好好的把握時光與資源！！</p>
     </div>
     <div class="more-info">
-        <span class="more"><a class="more-a" target="_blank" href="https://drive.google.com/file/d/1CmOZhbUqwPg5Y9loH4RRUEsGyxQBce3f/view?usp=sharing">觀看更多 --></a></span>
-        <h1><a target="_blank" href="https://drive.google.com/file/d/1CmOZhbUqwPg5Y9loH4RRUEsGyxQBce3f/view?usp=sharing">Other's Opinions</a></h1>
+        <span class="more"><a class="more-a" target="_blank" href="https://drive.google.com/file/d/1BMB_8Zbh5LaKT7yNHsUSbepBZ53g3kMT/view?usp=share_link">觀看更多 --></a></span>
+        <h1><a target="_blank" href="https://drive.google.com/file/d/1BMB_8Zbh5LaKT7yNHsUSbepBZ53g3kMT/view?usp=share_link">Other's Opinions</a></h1>
         <div class="info-text">
         <div class="feedback">
             <div class="feed-img"><img src="images/person.png" alt=""></div>
